fix: arrow in skills hight in stuck

--- a/src/style/hero.css
+++ b/src/style/hero.css
@@ -5,8 +5,8 @@
 .hero__container{
     display: flex;
     flex-direction: column;
-    width: 300px;
-    height: 400px;
+    width: 500px;
+    height: 600px;
     margin: 50px;
     justify-content: center;
     align-items: center;
@@ -53,6 +53,7 @@
     min-width: 300px;
     border: 2px solid rgba(176, 173, 173, 0.777);
     box-shadow: 4px 4px rgba(128, 128, 128, 0.69);
+    overflow: scroll;
 }
 .wrap {
     display: flex;
