--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -39,7 +39,7 @@ nav {
     justify-content: center;
     align-items: center;
 }
-.theme__container a {
+.theme__container p {
     margin-bottom: 10px;
     font-style: italic;
 }
