--- a/src/style/stuck.css
+++ b/src/style/stuck.css
@@ -5,22 +5,22 @@
 }
 .slider__container{
     display: flex;
-    height: 360px;
     width: auto;
     gap: 40px;
+    height: 280px;
+    margin-bottom: 25px;
 }
 .buttonArrow {
-    height: 80px;
+    height: 60px;
     background-color: var(--arrow);
     border-radius: 50%;
 }
 .pictures__container {
     display: flex;
     align-items: center;
-
 }
 .pictures__container img{
-    height: 265px;
+    height: 200px;
 }
 .pictures__container p{
     visibility: hidden;
